FIx jump

--- a/src/Components/Environment.module.css
+++ b/src/Components/Environment.module.css
@@ -47,10 +47,10 @@
 }
 @keyframes jump {
 	0% {
-		transform: translateX(-100%);
+		transform: translateX(-200%);
 	}
 	50% {
-		transform: translate(-50%, -30%);
+		transform: translate(-100%, -30%);
 	}
 	100% {
 		transform: none;
